parser/src/main/antlr/OpenQasm3.g4
grammar OpenQasm3;

// Parser rules
program
    : version? (statementLine)* EOF
    ;

statementLine
    : statement (';' statement)* ';'?
    ;

version
    : 'OPENQASM' REAL ';'
    ;

statement
    : qubitDeclaration
    | classicalDeclaration
    | gateApplication
    | measureStatement
    | barrier
    ;

qubitDeclaration
    : 'qubit' '[' INT ']' IDENTIFIER ';'
    | 'qreg' IDENTIFIER '[' INT ']' ';'
    ;

classicalDeclaration
    : 'creg' IDENTIFIER '[' INT ']' ';'
    ;

gateApplication
    : gateCall qubitArguments ';'
    ;

gateCall
    : gateName                             // Single qubit gates: x, y, z, h
    | gateName '(' expression ')'          // Parametrized gates: rz(π/2)
    ;

gateName
    : IDENTIFIER
    | 'cx'      // Alias for cnot
    | 'cnot'    // Alias for cx
    ;

qubitArguments
    : qubitReference (',' qubitReference)*
    ;

qubitReference
    : IDENTIFIER '[' INT ']'
    ;

measureStatement
    : 'measure' qubitReference '->' classicalReference ';'
    | 'measure' IDENTIFIER '->' IDENTIFIER ';'  // measure all qubits
    ;

classicalReference
    : IDENTIFIER '[' INT ']'
    ;

barrier
    : 'barrier' qubitArguments? ';'
    ;

expression
    : REAL
    | INT
    | PI
    | expression ('*'|'/') expression
    | expression ('+'|'-') expression
    | '(' expression ')'
    ;

// Lexer rules
IDENTIFIER
    : [a-zA-Z_][a-zA-Z0-9_]*
    ;

INT
    : [0-9]+
    ;

REAL
    : [0-9]+ '.' [0-9]*
    | '.' [0-9]+
    | [0-9]+
    ;

PI
    : 'π'
    | 'pi'
    ;

// Whitespace and comments
WS
    : [ \t\r\n]+ -> skip
    ;

LINE_COMMENT
    : '//' ~[\r\n]* -> skip
    ;

BLOCK_COMMENT
    : '/*' .*? '*/' -> skip
    ;
